Avoid DNS lookups when validating IPs (#30)
Update validateIP to use InetAddresses.forString to avoid potential DNS
lookups. Update utility classes to have private constructors and be
final.